[package]
name = "wakabox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
reqwest = "0.11.13"
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }